<resources>
    <string name="app_name">AKALATY EL SHAHEYA</string>
    <string name="btnsignIn">Sign In</string>
    <string name="btnsignUp">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="phonenumber">phoneNumber</string>
    <string name="password">password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="order">Order</string>
    <string name="sign_out">Sign Out</string>
    <string name="nmae_of_menu">Nmae of Menu</string>

    <string name="food_price_label">Price: %1$s</string>
    <string name="food_price_unavailable">Unavailable</string>
</resources>
