<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".ui.SignInActivity">


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"

        android:padding="16dp">
        <EditText
            android:id = "@+id/edPhoneNumber"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:inputType = "text"
            android:textStyle="bold"
            android:background="@drawable/btn_bg3"
            android:hint="@string/phonenumber"
            android:textSize="35sp"
            android:maxLength="11"
            android:textColorHint="@android:color/black"/>


        <EditText
            android:id = "@+id/edtPawwordSignIn"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:inputType = "textPassword"
            android:textStyle="bold"
            android:background="@drawable/btn_bg3"
            android:hint="@string/password"
            android:textSize="35sp"
            android:textColorHint="@android:color/black"
            />

    </LinearLayout>
    <Button
        android:id = "@+id/signin"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:textStyle="bold"
        android:background="@drawable/btn_bg2"
        android:text = "@string/signin"
        android:textSize="25sp"
        android:layout_marginTop="66dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>